# suivi_nlp

./: .gitignore  analysis_part1_summary.md  exo.mk  pyproject.toml  requirements.txt  reslt.txt  resultat3.txt  resultat_1.txt  resultat_2.txt
outputs/part3_ml/: hyperparameters_gaussian_naive_bayes.json  hyperparameters_k_neighbors.json  hyperparameters_logistic_regression.json  hyperparameters_random_forest.json  hyperparameters_support_vector_classifier.json  report_gaussian_naive_bayes.txt  report_k_neighbors.txt  report_logistic_regression.txt  report_random_forest.txt  report_support_vector_classifier.txt
outputs/part4/models/gru/: test_metrics.txt
outputs/part4/models/lstm/: test_metrics.txt
outputs/part4/models/textcnn/: test_metrics.txt
outputs/part4/models/transformer/: test_metrics.txt
src/: part4_deep_learning.py
src/part1/: analysis.py
src/part2/: analysis.py
src/part3/: analysis.py  classic_ml_gpu.py
src/part4/: part4_deep_learning.py
