[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "cudf-cu12==25.2.*",
    "cuml-cu12==25.2.*",
    "cupy-cuda12x>=13.4.1",
    "datasets>=2.14.4",
    "gensim>=4.3.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pip>=25.1",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "ray[tune]>=2.44.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "wordcloud>=1.9.4",
]
